<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GuessHue</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_round">Round</string>
    <string name="title_activity_approval">Approval</string>
    <string name="title_activity_score">Score</string>
    <string name="title_activity_final_score">FinalScore</string>
    <string name="button_play">PLAY GAME</string>
    <string name="high_scores">HIGH SCORES</string>
    <string name="title_activity_high_scores">HighScores</string>
    <string name="your_color">The color you found:</string>
    <string name="user_color_description">The color produced by the user photograph.</string>
    <string name="take_photo">TAKE A PHOTO</string>
    <string name="use_photo">USE THIS COLOR</string>
    <string name="find_color">Find this color!</string>
    <string name="instructions">Take a picture of something this color:</string>
    <string name="goal_color_description">Find this color!</string>
    <string name="play_round_button">PLAY ROUND</string>
    <string name="title_activity_global_settings">GlobalSettingsActivity</string>
    <string name="go_to_menu">SUBMIT</string>
    <string name="next_round">NEXT ROUND</string>
    <string name="initials_hint">AAA</string>
    <string name="return_menu">BACK TO MENU</string>
    <string name="literal_final_score">Final score:</string>
    <string name="round_score">Round score:</string>

</resources>
