<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/HueBackground"
    tools:context="com.bestteamathackrice.guesshue.Round"
    android:orientation="vertical">

    <com.bestteamathackrice.guesshue.CustomTextView
        android:text="@string/find_color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal" />

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:id="@+id/goal_color"
        android:contentDescription="@string/goal_color_description"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/count_down_text_round"
        android:layout_gravity="center_horizontal" />

    <com.bestteamathackrice.guesshue.CustomTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/instructions"
        android:layout_gravity="center_horizontal" />

    <com.bestteamathackrice.guesshue.CustomButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/play_round"
        android:hint="@string/play_round_button"
        android:layout_gravity="center_horizontal"
        android:onClick="dispatchApprovalActivity" />

</LinearLayout>
