<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/HueBackground"
    tools:context="com.bestteamathackrice.guesshue.Approval"
    android:orientation="vertical">

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/count_down_text_approval"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:text="@string/your_color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/your_color_text"
        android:layout_gravity="center_horizontal" />

    <ImageView
        android:id="@+id/user_color"
        android:contentDescription="@string/user_color_description"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center_horizontal" />

    <com.bestteamathackrice.guesshue.CustomButton
        android:layout_width="270dp"
        android:layout_height="60dp"
        android:id="@+id/take_photo"
        android:layout_gravity="center_horizontal"
        android:text="@string/take_photo"
        android:onClick="takePhoto"
        android:textColor="@color/HueMedium"

        android:textSize="30sp"
        android:background="@drawable/round_button"
        android:layout_marginBottom="30dp"
        style="?android:attr/borderlessButtonStyle"/>

    <com.bestteamathackrice.guesshue.CustomButton
        android:layout_width="270dp"
        android:layout_height="60dp"
        android:id="@+id/use_photo"
        android:layout_gravity="center_horizontal"
        android:text="@string/use_photo"
        android:onClick="goToScore"
        android:textColor="@color/HueMedium"
        android:textSize="30sp"
        android:background="@drawable/round_button"
        android:layout_marginBottom="20dp"/>

</LinearLayout>
